--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <h1 class="main-title">DAD JOKES</h1>
-    <h3 class="intro"><a target="_blank" href="www.linkedin.com/in/sitaram-koundinya">LinkedIn</a> | <a href="github.com" target="_blank">GitHub</a></h3>
+    <h3 class="intro"><a target="_blank" href="www.linkedin.com/in/sitaram-koundinya">LinkedIn</a> | <a href="https://github.com/KoundinyaSi/Dadjokes" target="_blank">GitHub</a></h3>
     <div id="root">
     </div>
   </body>
