Corrected linkedin url

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta
       name="description"
       content="Web site created using create-react-app" />
-    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
  
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
@@ -17,7 +17,7 @@
   </head>
   <body>
     <h1 class="main-title">DAD JOKES</h1>
-    <h3 class="intro"><a target="_blank" href="www.linkedin.com/in/sitaram-koundinya">LinkedIn</a> | <a href="https://github.com/KoundinyaSi/Dadjokes" target="_blank">GitHub</a></h3>
+    <h3 class="intro"><a target="_blank" href="https://www.linkedin.com/in/sitaram-koundinya/">LinkedIn</a> | <a href="https://github.com/KoundinyaSi/Dadjokes" target="_blank">GitHub</a></h3>
     <div id="root">
     </div>
   </body>
